chore: 增加 publishConfig 配置

--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "name": "@miaoxing/router-modal",
   "version": "0.1.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  }
 }
