fix: 更新前端包依赖

--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
+  },
+  "dependencies": {
+    "react-bootstrap": "^1.0.0"
   }
 }
