test(router-modal): 初始化测试

--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "react-bootstrap": "^1.0.0"
+    "react-bootstrap": "^1.0.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@miaoxing/dev": "^6.4.0"
+    "@miaoxing/dev": "^6.4.0",
+    "@testing-library/react": "^11.2.6"
   },
   "jest": {
     "preset": "jest-preset-miaoxing"
