--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "@mxjs/router": "^0.1.2"
   },
   "devDependencies": {
     "@miaoxing/dev": "^6.4.0",
