ci: 替换 `jest-preset-miaoxing` 依赖

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "ciDependencies": {
     "babel-preset-miaoxing": "miaoxing/babel-preset-miaoxing",
+    "jest-preset-miaoxing": "miaoxing/jest-preset-miaoxing",
     "@miaoxing/dev": "miaoxing/dev"
   }
 }
